2008-01-30  David Shaw  <dshaw@jabberwocky.com>

	* parse.c (read_secrets_file): Ignore blank lines in text input.

2007-11-02  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.1: Escape dashes in man page.  From Peter Palfrader.

2007-11-01  David Shaw  <dshaw@jabberwocky.com>

	* output.h, output.c (output_file_format): New function to print
	our file format into the archive.
	
	* paperkey.c (main), output.c (output_start): Use it here.
	Suggested by Brendan Kidwell.

2007-10-03  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac: NEWS: Post-release commit.

	* README, configure.ac, NEWS: Preparing 0.7 release.

2007-09-25  David Shaw  <dshaw@jabberwocky.com>

	* paperkey.c (main): There is no such thing as an "auto"
	--output-type.

	* parse.c (parse): Just in case, check for a short read on the
	packet.

2007-09-24  David Shaw  <dshaw@jabberwocky.com>

	* AUTHORS, Makefile.am, paperkey.spec.in, paperkey.1: Add man page
	thanks to Peter Palfrader.

	* restore.h, restore.c (restore): Pass in secrets FILE* from
	outside.  Don't do the reopen-as-text trickery since even Win32
	doesn't need it.
	paperkey.c (main): Call it from here.  This allows for secrets to
	come in on stdin.

2007-09-22  David Shaw  <dshaw@jabberwocky.com>

	* configure.ac, NEWS: Release version 0.6.

	* output.h, output.c (do_crc24): Better CRC24 implementation.
	parse.c (read_secrets_file), output.c (output_bytes): Call it
	here.

	* README: Bar codes, of course, have many of the disadvantages of
	non-human-readable media.

	* paperkey.c (usage): Options.

	* parse.c (read_secrets_file), output.c (output_finish,
	output_bytes, print_base16): Add a CRC on RAW output as well.
	(parse): Note that we don't support armored data.

	* NEWS, README: Update.

	* parse.c (read_secrets_file), output.c (print_base16): Add an
	overall CRC that covers the whole secrets file.

	* output.c (output_length16): Fix sizing bug.  Thanks to Peter
	Palfrader.