@@ -12,12 +12,12 @@ BuildRoot: %{_tmppath}/%{name}-root
 
 %description
 A reasonable way to achieve a long term backup of OpenPGP (PGP, GnuPG,
-etc) keys is to print them out on paper.  The reasoning behind this is
-that paper and ink has amazingly long retention qualities - far longer
-than the magnetic or optical means that are generally used to back up
-computer data.  A paper backup isn't a replacement for the usual
-machine readable (tape, CD-R, DVD-R, etc) backups, but rather as an
-if-all-else-fails method of restoring a key.
+etc) keys is to print them out on paper.  Paper and ink have amazingly
+long retention qualities - far longer than the magnetic or optical
+means that are generally used to back up computer data.  A paper
+backup isn't a replacement for the usual machine readable (tape, CD-R,
+DVD-R, etc) backups, but rather as an if-all-else-fails method of
+restoring a key.
 
 %prep
 %setup
